<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/Backround"
    android:layout_height="wrap_content"
    tools:context=".DataObat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="564dp"
        android:layout_marginBottom="356dp"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            android:text="@string/JudulInputObat"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/KodeObat" />

        <EditText
            android:id="@+id/edikode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NamaObat" />

        <EditText
            android:id="@+id/edinmobt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Jumlah" />

        <EditText
            android:id="@+id/edijml"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Harga" />

        <EditText
            android:id="@+id/edihrga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btntmbh"
            android:layout_width="148dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_margin="35dp"
            android:layout_marginTop="5dp"
            android:background="@color/Backround"
            android:text="@string/Tambahkan"
            android:textColor="#FFFFFF"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="357dp" />

    </LinearLayout>

</LinearLayout>