<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/Backround"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="713dp"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Namaapotik"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Alamat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_weight="1"
            android:id="@+id/infoobat"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/test"
                android:onClick="IO"
                android:id="@+id/IO"
                android:foreground="?android:attr/selectableItemBackground"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoobat"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:id="@+id/dataobat"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/iconobat"
                android:id="@+id/Do"
                android:onClick="DO"
                android:foreground="?android:attr/selectableItemBackground"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DataObat"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:id="@+id/mntrnsksi"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/trnicon"
                android:onClick="MT"
                android:id="@+id/MT"
                android:foreground="?android:attr/selectableItemBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MenuTransaksi"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:id="@+id/historitransaksi"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:src="@drawable/hstricon"
                android:onClick="RW"
                android:id="@+id/RW"
                android:foreground="?android:attr/selectableItemBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/History"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/Keluar"
            android:textColor="@color/black"
            android:id="@+id/btnklwr"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:padding="15dp"/>

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>